@@ -1,3 +1,8 @@
+2009-01-10  Thomas Thurman  <tthurman@gnome.org>
+
+	* src/ui/theme.[ch]: add meta_theme_draw_frame_by_name, which
+          is needed for the theme editor.
+
 2008-12-26  Thomas Thurman  <tthurman@gnome.org>
 
         * configure.in: Post-release bump to 2.25.144.
